<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LaudaCommands" Id="{58f56184-a241-44f5-bdb2-48de90ce09c9}">
    <Declaration><![CDATA[TYPE ST_LaudaCommands :
STRUCT
	ReadCommands	: ST_LaudaReadCommands;
	WriteCommands	: ST_LaudaWriteCommands;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>