<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_LaudaCommandGenerator" Id="{5fffc554-b07e-438f-af97-67f733935800}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_LaudaCommandGenerator
VAR_INPUT
END_VAR

VAR
	_formatString	: FB_FormatString;
END_VAR

VAR CONSTANT
	COMMAND_SUFFIX	: STRING := '$R$L';
	COMMANDS		: ST_LaudaCommands;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AddSuffix" Id="{d4bcf624-88d7-4467-b087-94298f8a0749}">
      <Declaration><![CDATA[METHOD PRIVATE AddSuffix : Tc2_System.T_MaxString
VAR_INPUT
	sCommand	: Tc2_System.T_MaxString;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[AddSuffix := Tc2_Standard.CONCAT(STR1 := sCommand, STR2 := COMMAND_SUFFIX);]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetTemperature" Id="{0f019185-742f-4ba3-b819-206118ea4ac4}">
      <Declaration><![CDATA[METHOD PUBLIC SetTemperature : T_maxstring
VAR_INPUT
	fTemperature	: REAL;
END_VAR

VAR_INST
	errorID	: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_formatString(
	sFormat := CONCAT(COMMANDS.WriteCommands.Temperature.TemperatureSet, '%06.2f'),
	arg1 := Tc2_Utilities.F_REAL(in := fTemperature),
	nErrId => errorID);
	

SetTemperature := AddSuffix(_formatString.sOut);]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>